# indoven-backend-challenge

./: Dockerfile  README.md  pyproject.toml  server.py
src/application/: create_user.py
src/application/create/: create_ecg.py  create_user.py
src/application/get/: get_metrics.py  login.py
src/domain/: ecg.py  role_not_found_error.py  user.py  user_repo.py
src/domain/ecg/: ecg.py  ecg_repo.py  lead.py
src/domain/ecg/errors/: ecg_not_found_error.py  metric_not_calculated_error.py  not_ecg_owner_error.py
src/domain/ecg/services/: metrics_calculator.py
src/domain/entities/: ecg.py  lead.py  user.py
src/domain/repositories/: user_repo.py
src/domain/types/: roles.py
src/domain/user/: roles.py  user.py  user_repo.py
src/domain/user/errors/: invalid_username_error.py
src/infra/: memory_user_repo.py  storage.py
src/infra/crypto/: hasher.py
src/infra/jwt/: jwt.py
src/infra/memory_repositories/: memory_ecg_repo.py  memory_user_repo.py
src/infra/shared/: jwt.py
src/routes/: create_user.py  dependencies.py  login.py
src/routes/get/: get_metrics.py
src/routes/middlewares/: token_validator.py
src/routes/post/: create_ecg.py  create_user.py  login.py
tests/: conftest.py
tests/application/: get_metrics.py  login.py
tests/domain/: test_metrics_calculator.py  test_user.py
tests/e2e/: test_create_user.py
tests/infra/: test_jwt.py  test_memory_ecg_repo.py  test_memory_user_repo.py
utils/: date_converter.py  type_guards.py
