[tool.poetry]
name = "idoven-backend-challenge"
version = "0.1.0"
description = "Idoven's technical challenge for the position of software engineer."
authors = ["hernii8 <hernandelafuentelopez@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = "^0.28.0"
python-jose = "^3.3.0"
passlib = "^1.7.4"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "e2e: marks tests as e2e, creating a fake API for testing (deselect with '-m \"not e2e\"')",
]
